--- a/.github/workflows/spec-parser.yml
+++ b/.github/workflows/spec-parser.yml
@@ -24,7 +24,7 @@ jobs:
           python-version: "3.11"
       - name: get spec-parser
         run: |
-          git clone --depth=1 --single-branch --branch=all_fixes https://github.com/meretp/spec-parser/
+          git clone --depth=1 --single-branch --branch=main https://github.com/spdx/spec-parser/
           cd spec-parser
           python3 -m pip install -r requirements.txt
           python main.py -h
